# sudarshan-superharness

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HEARTBEAT.md  IDENTITY.md  INSTALL_SUDARSHAN.md  LICENSE  MANIFEST.in  OPENCLAW_API_CONTRACT.md  OPENCLAW_CERTIFICATION_CHECKLIST.md  OPENCLAW_DEPLOYMENT_RUNBOOK.md  PLATFORM_CONTRACT.md  README.md  ROUTER_TRIGGER_LOGIC.md  SECURITY.md  SOUL.md  SUDARSHAN.md  SUDARSHAN_Guide_V7_Master.md  SUDARSHAN_HOST_CONTRACT.json  USER.md  autonomous_engine.py  dag_subgraph.py  dag_validator.py  engine_tools.py  estimator.py  generic_router_bridge.py  heartbeat_daemon.py  install.ps1  install.py  install.sh  install_manifest.json  observer.py  openclaw_adapter.py  openclaw_patcher.py  openclaw_router_bridge.py  platform_harness.py  process_runner.py  protocol_assets.py  protocol_runtime.py  providers.py  (+7 more)
.github/workflows/: ci.yml
examples/: demo_command_bridge.py  demo_spec.md
examples/fresh_openclaw_demo/: README.md
openclaw_plugins/: kill_all_subagents.json  kill_subagent.json  list_subagents.json  patch_identity.json  spawn_subagent.json
sudarshan_assets/: __init__.py
tests/: test_autonomous_engine.py  test_budget_enforcer.py  test_dag_subgraph.py  test_dag_validator.py  test_docs_parity.py  test_engine_tools.py  test_estimator.py  test_fresh_agent_certification.py  test_generic_router_bridge.py  test_heartbeat_daemon.py  test_install_fresh_agent.py  test_observer.py  test_openclaw_adapter.py  test_platform_harness.py  test_process_runner.py  test_providers.py  test_quality_gate.py  test_release_hygiene.py  test_release_manifest.py  test_router_hooks.py  test_safe_edit.py  test_standalone_e2e.py  test_sudarshan_cli.py  test_taskmanager_init.py  test_taskmanager_parallel_info.py  test_taskmanager_resume.py  test_taskmanager_state.py  test_templates.py  test_verify_installation.py
(+36 files in other folders)
